# xsd-parser

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  TODO  build.rs  list  out.rs  rust-toolchain.toml
benchmark/: Cargo.toml  README.md  build.rs
benchmark/src/: lib.rs  main.rs
benchmark/src/schemas/: ideal_merchant_acquirer_quick_xml.rs  ideal_merchant_acquirer_quick_xml_boxed.rs  ideal_merchant_acquirer_serde_quick_xml.rs  ideal_merchant_acquirer_serde_xml_rs_v7.rs  mod.rs  xs_quick_xml.rs  xs_quick_xml_boxed.rs
examples/aixm/: Cargo.toml  build.rs
examples/aixm/src/: main.rs
xsd-parser/: Cargo.toml  build.rs
xsd-parser/examples/: README.md  custom-naming.xsd  custom_names.rs  custom_naming.rs  custom_render_step.rs  custom_variants.rs  simple.rs  update_schema.rs
xsd-parser/src/: lib.rs  macros.rs  meta_types_printer.rs
xsd-parser/src/config/: generator.rs  interpreter.rs  mod.rs  optimizer.rs  parser.rs  renderer.rs
xsd-parser/src/misc/: mod.rs  qname.rs
xsd-parser/src/models/: ident.rs  ident_cache.rs  ident_map.rs  mod.rs  name.rs  naming.rs
xsd-parser/src/models/code/: ident_path.rs  mod.rs  module.rs
xsd-parser/src/models/data/: build_in.rs  complex.rs  constrains.rs  custom.rs  dynamic.rs  enumeration.rs  mod.rs  path_data.rs  reference.rs  simple.rs  tag_name.rs  type_.rs  types.rs  union.rs
xsd-parser/src/models/meta/: attribute.rs  base.rs  complex.rs  custom.rs  dynamic.rs  element.rs  enumeration.rs  mod.rs  reference.rs  simple.rs  type_.rs  type_eq.rs  types.rs  union.rs
xsd-parser/src/models/naming/: default.rs  explicit.rs  mod.rs
xsd-parser/src/models/schema/: mod.rs  occurs.rs  qname.rs  xs.rs  xs_generated.rs
xsd-parser/src/pipeline/generator/: context.rs  custom.rs  error.rs  meta.rs  mod.rs  state.rs
xsd-parser/src/pipeline/interpreter/: error.rs  mod.rs  name_builder.rs  post_process.rs  schema.rs  state.rs  variant_builder.rs
xsd-parser/src/pipeline/optimizer/: dynamic_to_choice.rs  empty_enums.rs  empty_unions.rs  flatten_complex_type.rs  flatten_unions.rs  merge_choice_cardinality.rs  merge_dynamic_types.rs  merge_enum_unions.rs  mod.rs  remove_duplicates.rs  replace_xs_any_type_with_any_element.rs  resolve_typedefs.rs  simplify_mixed_types.rs  unrestricted_base.rs
xsd-parser/src/pipeline/parser/: error.rs  mod.rs
xsd-parser/src/pipeline/renderer/: context.rs  custom.rs  error.rs  meta.rs  mod.rs
xsd-parser/src/traits/: mod.rs  naming.rs  vec_helper.rs
xsd-parser/tests/: README.md  debug_naming_test.rs  download  mod.rs  utils.rs
xsd-parser/tests/feature/: mod.rs
xsd-parser/tests/feature/absolute_paths/: mod.rs
xsd-parser/tests/feature/advanced_enums/: mod.rs  schema.xsd
xsd-parser/tests/feature/any/: mod.rs
xsd-parser/tests/feature/any_simple_type/: mod.rs  schema-custom-type.xsd  schema.xsd
xsd-parser/tests/feature/any_type/: mod.rs
xsd-parser/tests/feature/any_type_nested/: mod.rs
xsd-parser/tests/feature/attribute/: mod.rs  schema.xsd
xsd-parser/tests/feature/build_in/: mod.rs
xsd-parser/tests/feature/choice_flatten_content/: mod.rs  schema.xsd
xsd-parser/tests/feature/choice_single_option_defaults/: mod.rs  schema.xsd
xsd-parser/tests/optimizer/: abstract.xsd  complex_flatten.xsd  duplicate.xsd  enum_empty.xsd  merge_dynamic_types.xsd  mod.rs  union_empty.xsd
xsd-parser/tests/schema/: mod.rs
(+1509 files in other folders)
