[package]
name = "aixm"
version = "0.1.0"
publish = false
license.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
num = { workspace = true }
xsd-parser-types = { workspace = true, features = [ "quick-xml" ] }

[build-dependencies]
anyhow = { workspace = true }
xsd-parser = { workspace = true }

[lints]
workspace = true
